themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
/* Global */
.slick-track {
	transition: 300ms all ease-in-out;
}

.swiper-container {
	background-color: $secondary-bg;
	width: 100%;
	position: relative;
}

.slideshow-title {
	margin: 0;
	background-color: $secondary-bg;
	color: $secondary-text;
	border-bottom: 1px solid $btn-bg;
	text-transform: uppercase;
	font-size: ms(2);
	@include bp(medium) {
		font-size: ms(7);
	}
	.container {
		min-height: 0;
		padding: 0 20px;
	}
}

/* Sidebar */
.swiper-sidebar {
	position: absolute;
	z-index: 1;
	background: rgba($secondary-bg,.7);
	color: $secondary-text;
	transition: 300ms all ease-in-out;
	opacity: 1;
	overflow: hidden;

	bottom: 0;
	padding: 40px 20px 10px 20px;
	height: 96px;

	@include bp(medium) {
		left: 75%;
		right: 0;
		top: 0;
		height: 100%;

		padding: 30px;
	}

	&.hidden {
		opacity: 0;
		z-index: -1;
	}

	&.expand {
		height: 100%;
		overflow: auto;

		@include bp(medium) {
			.close-label {
				display: inline-block;
			}
			.expand-label {
				display: none;
			}
		}

		.swiper-sidebar-expand .icon-arrow-next {
			transform: rotate(90deg);
			@include bp(medium) {
				transform: rotate(-90deg);
			}
		}
		#js-swiper-sidebar-title,
		#js-swiper-sidebar-caption {
			white-space: normal;
			height: auto;
		}
		.swiper-sidebar-sharing {
			align-self: flex-start;
		}

		#js-swiper-sidebar-download {
			display: block;
		}
	}
}

#js-swiper-sidebar-caption {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	position: relative;
}

.swiper-sidebar-expand {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 50px;
	left: 50%;
	margin-left: -25px;
	text-align: center;
	font-size: 20px;

	background-color: transparent;
	border: 0;
	padding: 0;
	transition: 300ms all ease-in-out;

	.close-label,
	.expand-label {
		display: none;
	}

	@include bp(medium) {
		position: relative;
		top: auto;
		left: auto;
		margin-left: 0;
		width: auto;
		margin-top: -10px;
		.close-label,
		.expand-label {
			font-size: 14px;
			display: inline-block;
			vertical-align: middle;
		}
		.close-label {
			display: none;
		}
	}

	.icon-arrow-next {
		display: inline-block;
		vertical-align: middle;
		transform: rotate(-90deg);
		@include bp(medium) {
			transform: rotate(0);
		}
	}
}

.swiper-sidebar-fullscreen {
	position: absolute;
	top: 0;
	right: 0;

	background-color: transparent;
	border: 0;
	padding: 0;
	transition: 300ms all ease-in-out;
	padding: 10px;
	display: none;
	@include bp(medium) {
		display: block;
	}

	svg {
		fill: white;
		width: 25px;
		height: 25px;
	}
}

#js-swiper-sidebar-title {
	margin: 0;
	font-size: ms(2);
	@include bp(medium) {
		font-size: ms(6);
	}
}

#js-swiper-sidebar-download {
	display: none;
	@include bp(medium) {
		display: block;
	}
}

.swiper-sidebar-meta {
	margin-top: 20px;
	display: none;
	@include bp(medium) {
		display: block;
	}
}

.swiper-sidebar .social__link {
	color: #fff;
	border-color: $btn-bg;
	background-color: $btn-bg;

	&:hover {
		background-color: transparent;
		color: $btn-bg;
	}
}

/* Sidebar mobile */
@media (max-width: 767px) {
	.swiper-sidebar {
		display: flex;
		justify-content: space-between;
		width: 100%;
		left: 0 !important;
	}
	.swiper-sidebar-text {
		flex-basis: calc(100% - 140px);
		max-width: calc(100% - 140px);
	}
	#js-swiper-sidebar-title,
	#js-swiper-sidebar-caption {
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
		line-height: 1.3;
		position: relative;
	}
	.swiper-sidebar-sharing {
		flex-basis: 140px;
		align-self: center;
		transition: 300ms all ease-in-out;
	}
}

/* Gallery top */
.gallery-top {

	padding-bottom: 96px;
	@include bp(medium) {
		padding-bottom: 0;
	}

	&.show-ad {
		padding-bottom: 0;
	}

	&.loading {
		background-color: #fff;
		background-image: url(#{$asset-root}ajax-loader.gif);
		background-repeat: no-repeat;
		background-position: center 100px;
	}

	&.loading .swiper-sidebar,
	&.loading .swiper-wrapper {
		opacity: 0;
	}

	&.fullscreen {
		position: fixed;
		top: 0;
		left: 0;
		width: 100%;
		height: 100vh;
		z-index: 999999999;
		.swiper-image {
			height: 100vh;
		}
		.slick-slide {
			height: 100vh;
			min-height: 100vh;
		}
		.enter-fullscreen {
			display: none;
		}
		.exit-fullscreen {
			display: block;
		}
	}
	.exit-fullscreen {
		display: none;
	}
	.enter-fullscreen {
		display: block;
	}
	.slick-slide {
		opacity: .3;
		transition: 300ms all ease-in-out;
		position: relative;
	}
	.image-attribution {
	    	background-color: rgba(0, 0, 0, 0.5);
    		color: white;
		padding: 5px 10px;
		position: absolute;
		right: 0;
		bottom: 0;
		max-width: 369px; // For the 768 breakpoint. Everything else constrains this properly
	}
	.slick-slide.slick-current {
		opacity: 1;
	}
	.swiper-image {
		height: calc(100vh - 142px);
		width: auto;
		transition: 300ms all ease-in-out;
		@include bp(medium) {
			height: 600px;
		}
		@media (max-width: 767px) {
			height: auto;
			width: 100%;
			max-width: 100%;
		}
	}
	.slick-slide {
		min-height: calc(100vh - 142px);
		@include bp(medium) {
			min-height: 600px;
		}
		@media (max-width: 767px) {
			min-height: 0;
		}
	}
    .meta-spacer {
        width: 0;

        @media (max-width: 767px) {
            min-height: calc(100vh - 142px);
        }
    }
	.slick-current.meta-spacer {
		width: 100vw !important;
		transition: 300ms all ease-in-out;
		@include bp(medium) {
			width: 400px !important;
		}
	}
}

/* Thumbnails */

.gallery-thumbs.slick-slider {
	background-color: $secondary-bg;
  height: 75px;
  box-sizing: border-box;
  padding: 0;
  width: 100%;
  z-index: 999;
  display: none;
  border-bottom: 1px solid $btn-bg;

	@include bp(medium) {
		display: block;
	}
}

.gallery-thumbs {
  height: 75px;
	&.loading {
		background-color: #fff;
		> * {
			opacity: 0;
		}
	}

	&.hidden {
		display: none;
	}

	.swiper-slide {
	  width: 75px !important;
	  height: 75px;
	  background-size: cover;
	  background-position: center;
	}

	.slick-slide.slick-current {
		opacity: 1;
	}
	.slick-slide:hover {
		opacity: 1;
		cursor: pointer;
	}
	.slick-slide {
		opacity: .5;
		position: relative;
		z-index: 8;
		transition: 300ms all ease-in-out;
	}
	.slick-slide.is-meta {
	  z-index: 10;
	}
	.slick-slide.is-meta:hover + .slick-slide {
	  opacity: 1;
	}

	.slick-slide.is-meta.slick-current {
	  z-index: 8;
	}

	.swiper-slide.meta-spacer {
		position: absolute;
		top: 0;
		left: 100%;
		z-index: 9;
	}
}

/* Last slide */
.last-slide {
	color: white;
	padding: 20px;
	background-color: black;
	width: 100vw;
	@include bp(medium) {
		width: 80vw;
		max-width: 750px;
	}
	.gallery__grid--title {
		color: white;
		text-align: center;
		font-weight: bold;
		text-transform: uppercase;
	}
	.gallery__grid--column:hover {
		.gallery__grid--title {
			color: $btn-bg;
		}
	}
	h2 {
		text-transform: uppercase;
		text-align: center;
		color: $btn-bg;
	}
}
/* Ads */

.swiper-meta-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 0;
	height: 100%;
	transition: none;
	background-color: $secondary-bg;
	color: $secondary-text;
	overflow: hidden;

	display: flex;
	align-items: center;
	pointer-events: none;
	text-align: center;
	justify-content: center;
	@include bp(medium) {
		left: 50%;
	}

	.show-ad & {
		width: 100vw;
		z-index: 999;
		transition: 300ms all 100ms ease-in-out;
		@include bp(medium) {
			width: 400px;
			margin-left: -200px;
		}
	}
}

.swiper-meta-inner {
	padding: 20px;
	pointer-events: all;
	opacity: 0;
	transition: none;
	margin: 0 auto;

	.show-ad & {
		opacity: 1;
		transition: 300ms all 300ms ease-in-out;
		&:after {
			content: "swipe here to continue";
			text-transform: uppercase;
			display: inline-block;
			pointer-events: none;
			position: absolute;
			bottom: 20px;
			width: 100%;
			left: 0;
			@include bp(medium) {
				display: none;
			}
		}
	}

}

.meta-spacer {
	width: 0;
	transition: 300ms all ease-in-out;
}

/* Arrows */
.gallery-top {

	.slick-next {
		right: 0;
	}

	.slick-prev {
		left: 0;
	}

	.slick-arrow {
		z-index: 9999;
		position: absolute;
		top: 50%;
		padding: 0;
		border: 0;
		background-color: transparent;
		height: 100px;
		margin-top: -50px;
		width: 20px;
		color: #fff;
		@include bp(medium) {
			top: 300px;
			height: 150px;
			margin-top: -75px;
			width: 40px;
			font-size: 25px;
		}
		&:hover {
			background-color: $btn-bg;
		}
	}

	.slick-arrow.slick-disabled {
		pointer-events: none;
		opacity: 0;
	}
}

